--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,17 @@
-*,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap"); */
+
+/* *,
 *::after,
 *::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+
+html {
+  font-family: "Nanum Gothic", sans-serif;
+} */
